Fix table header alignment when not sortable

--- a/app/styles/components/_tables.scss
+++ b/app/styles/components/_tables.scss
@@ -437,4 +437,11 @@ TABLE {
       padding: 20px 0px;
     }
   }
+
+  // Ensure column headers that aren't sortable align correctly vertically
+  .sortable {
+    .no-sort-spacer {
+      line-height: 2em;
+    }
+  }
 }
